kubernetes/eks/addons/pod-identity-webhook/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-identity-webhook
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-identity-webhook
  template:
    metadata:
      labels:
        app: pod-identity-webhook
    spec:
      serviceAccountName: pod-identity-webhook
      containers:
      - name: pod-identity-webhook
        image: amazon/amazon-eks-pod-identity-webhook:2db5e53
        imagePullPolicy: Always
        command:
        - /webhook
        - --in-cluster
        - --aws-default-region=ap-northeast-2
        - --namespace=default
        - --service-name=pod-identity-webhook
        - --tls-secret=pod-identity-webhook
        - --annotation-prefix=eks.amazonaws.com
        - --token-audience=sts.amazonaws.com
        - --logtostderr
        volumeMounts:
        - name: webhook-certs
          mountPath: /var/run/app/certs
          readOnly: false
      volumes:
      - name: webhook-certs
        emptyDir: {}
