kubernetes/eks/addons/pod-identity-webhook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-identity-webhook
  namespace: default
spec:
  ports:
  - port: 443
    targetPort: 443
  selector:
    app: pod-identity-webhook
