kubernetes/eks/addons/pod-identity-webhook/mutatingwebhook-ca-bundle.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: pod-identity-webhook
  namespace: default
webhooks:
- name: pod-identity-webhook.amazonaws.com
  failurePolicy: Ignore
  sideEffects: None
  clientConfig:
    service:
      name: pod-identity-webhook
      namespace: default
      path: "/mutate"
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM1ekNDQWMrZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJeE1EVXdPVEEyTXpnek1sb1hEVE14TURVd056QTJNemd6TWxvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS0RvCkZLZFZRaVlMQ2syWkkveE14em9YV0x2SFc3Q0lWajhhbzVmcVVTdm1hWDQ3YU9ydmFTSXhaWktYd0FqOHZydEwKc09MNUh2K1pHT0FiVDFtKzdpMk9KTzY1dkRNeHpCUEwwVk5MdS83ZERoOTRpQTFmMGY0VG41YnpvUE1CY04rcApwVXpkaG5Za1pyN3 [...]
  rules:
  - operations: [ "CREATE" ]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
